# fortress_sim

./: CMakeLists.txt  LICENSE.md  package.xml  thirdparty.repos
launch/: navigation_sim.launch.py  robot_state_publisher.launch.py  simulation.launch copy.py  simulation.launch.py  spawn_turtlebot3.launch.py
maps/: aws_house.pgm
models/turtlebot3_waffle/: model-1_4.sdf  model.sdf
params/: turtlebot3_waffle_bridge.yaml  waffle_sim_nav_params.yaml
urdf/: turtlebot3_waffle.urdf
